--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
-  "name": "latite-scripting-template",
+  "name": "latite-scripting-template-webpack",
   "version": "1.0.0",
-  "description": "A template for Latite Scripting",
+  "description": "A Webpack template for Latite Scripting",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "tsc && copy .\\src\\plugin.json .\\out\\plugin.json"
+    "build": "tsc && webpack && copy .\\src\\plugin.json .\\dist\\plugin.json && echo. && echo Your plugin will be at the *dist* folder! && echo."
   },
   "devDependencies": {
     "@rollup/plugin-typescript": "^11.1.2",
     "rollup-plugin-combine": "^2.1.1",
     "rollup-plugin-match": "^1.0.0",
     "tslib": "^2.6.0",
-    "typescript": "^5.1.3"
+    "typescript": "^5.1.3",
+    "webpack": "^5.89.0",
+    "webpack-cli": "^5.1.4"
   }
 }
