--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "rollup-plugin-match": "^1.0.0",
     "tslib": "^2.6.0",
     "typescript": "^5.1.3"
+  },
+  "dependencies": {
+    "@latitescripting/latiteapi": "^2.0.0"
   }
 }
