--- a/package.json
+++ b/package.json
@@ -12,6 +12,6 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
-    "@latitescripting/latiteapi": "^2.1.1"
+    "@latitescripting/latiteapi": "latest"
   }
 }
